stacks_eks/40_app_argocd/k8s_ingress_app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: ${APP_NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: ${SG_IDS}
    alb.ingress.kubernetes.io/group.name: ${NAME}
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ${APP_SVC}
      port:
        number: ${APP_PORT}
